--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,9 +6,22 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
+const posts = (await getCollection('blog'))
+	.map((post) => {
+		// Extract date and title from the filename (post.id)
+		const filename = post.id.split('/').pop() || '';
+		const dateMatch = filename.match(/^(\d{4}-\d{2}-\d{2})/);
+		const pubDate = dateMatch ? new Date(dateMatch[1]) : new Date();
+		const title = filename.replace(/^\d{4}-\d{2}-\d{2}\s*/, '').replace(/\.md$/, '') || filename;
+		
+		return {
+			...post,
+			displayTitle: post.data.title || title,
+			displayDate: post.data.pubDate || pubDate,
+		};
+	})
+	.sort((a, b) => b.displayDate.valueOf() - a.displayDate.valueOf());
+
 ---
 
 <!doctype html>
@@ -94,15 +107,16 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.id}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
+									<img width={720} height={360} src={post.data.heroImage || '/blog-placeholder-about.jpg'} alt="" />
+									<h4 class="title">{post.displayTitle}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={post.displayDate} />
 									</p>
 								</a>
 							</li>
 						))
 					}
+
 				</ul>
 			</section>
 		</main>
