--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -27,7 +27,7 @@ const title = post.data.title || filename.replace(/^\d{4}-\d{2}-\d{2}\s*/, '').r
 	description={post.data.description || ''} 
 	pubDate={pubDate} 
 	updatedDate={post.data.updatedDate} 
-	heroImage={post.data.heroImage}
+	eyecatch={post.data.eyecatch}
 >
 	<Content />
 </BlogPost>
